--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
 /* =========================
    common
 ========================= */
+html{
+  font-size: 16px;
+}
 html,
 body {
   box-sizing: border-box;
