--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@
 /* =========================
    common
 ========================= */
-html{
-  font-size: 16px;
+html {
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 html,
 body {
@@ -12,6 +13,7 @@ body {
   font-family: "Yu Gothic", "YuGothic", "Hiragino Sans", "Meiryo", sans-serif;
   font-weight: 400;
   min-width: 360px;
+  font-size: 16px;
 }
 h1 {
   margin: 0;
