--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
 /* =========================
    common(スマホ基準)
 ========================= */
+*, *::before,*::after{
+  box-sizing: inherit;
+}
 html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
@@ -24,7 +27,7 @@ h3 {
   margin: 0 auto ;
   position: relative;
   display: inline-block;
-  padding: 0 55px;
+  padding: 0 24px;
   font-size: 20px;
   letter-spacing: 1.2px;
 }
@@ -34,7 +37,7 @@ h3::after {
   position: absolute;
   top: 50%;
   display: inline-block;
-  width: 48px;
+  width: 24px;
   height: 2px;
   border-top: solid 1px black;
   border-bottom: solid 1px black;
@@ -68,6 +71,9 @@ p {
 .heading-center {
   text-align: center;
 }
+button{
+  cursor: pointer;
+}
 .more-btn{
   margin: 0 auto;
   display: block;
@@ -79,11 +85,15 @@ p {
   margin-top: 32px;
   cursor: pointer;
   border-radius: 8px;
+  transition: background 0.4s;
 }
 
 .more-btn:hover{
   background: rgb(183, 244, 164);
-  transition: 0.4s;
+}
+img{
+  max-width: 100%;
+  height: auto;
 }
 /* =========================
    header
@@ -125,7 +135,7 @@ header img {
 .hero h2 {
   color: white;
   font-size: 32px;
-  text-shadow: 2px 8px 8px gray;
+  text-shadow: 0px 2px 8px rgba(0,0,0,0.6);
   padding-top: 36px;
 }
 .hero p {
@@ -238,7 +248,7 @@ a{
   font-weight: bold;
   text-align: center;
   letter-spacing: 1.7px;
-  width: 100%;
+  width: 90%;
 }
 
 .feature .feature-list .item + .item{
