--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
 /* =========================
    common(スマホ基準)
 ========================= */
-*, *::before,*::after{
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 html {
@@ -24,7 +26,7 @@ h2 {
   margin: 0;
 }
 h3 {
-  margin: 0 auto ;
+  margin: 0 auto;
   position: relative;
   display: inline-block;
   padding: 0 24px;
@@ -66,19 +68,19 @@ p {
   max-width: 600px;
   margin: 0 auto;
   width: 100%;
-  padding:  0 16px;
+  padding: 0 16px;
 }
 .heading-center {
   text-align: center;
 }
-button{
+button {
   cursor: pointer;
 }
-.more-btn{
+.more-btn {
   margin: 0 auto;
   display: block;
-  padding:16px;
-  font-size:14px;
+  padding: 16px;
+  font-size: 14px;
   font-weight: bold;
   border: 0;
   background: rgb(214, 251, 203);
@@ -86,12 +88,14 @@ button{
   cursor: pointer;
   border-radius: 8px;
   transition: background 0.4s;
+  width: 100%;
+  color: rgb(93, 93, 93);
 }
 
-.more-btn:hover{
+.more-btn:hover {
   background: rgb(183, 244, 164);
 }
-img{
+img {
   max-width: 100%;
   height: auto;
 }
@@ -135,7 +139,7 @@ header img {
 .hero h2 {
   color: white;
   font-size: 32px;
-  text-shadow: 0px 2px 8px rgba(0,0,0,0.6);
+  text-shadow: 0px 2px 8px rgba(0, 0, 0, 0.6);
   padding-top: 36px;
 }
 .hero p {
@@ -144,11 +148,10 @@ header img {
   font-size: 16px;
   margin: 40px 0;
 }
-a{
+a {
   text-decoration: none;
   color: initial;
 }
-
 
 /* =========================
    popular-item
@@ -180,12 +183,12 @@ a{
 .popular-item .card p {
   font-size: 14px;
 }
-.card{
+.card {
   position: relative;
 }
-.badge{
+.badge {
   position: absolute;
-  top:8px;
+  top: 8px;
   left: 8px;
   background: red;
   color: white;
@@ -196,7 +199,7 @@ a{
   z-index: 1;
 }
 
-.card-link img:hover{
+.card-link img:hover {
   opacity: 0.7;
   transition: opacity 0.4s;
 }
@@ -204,13 +207,13 @@ a{
     feature
  ========================= */
 .feature {
-  padding: 48px 0 48px;
+  padding: 48px 0;
 }
 .feature-list {
   margin-top: 32px;
 }
 
-.feature .item .feature-img{
+.feature .item .feature-img {
   position: relative;
   overflow: hidden;
 }
@@ -222,28 +225,28 @@ a{
   vertical-align: bottom;
 }
 
-.feature .item .feature-img::after{
+.feature .item .feature-img::after {
   content: "";
   position: absolute;
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background: linear-gradient(
     to bottom,
-  rgba(0,0,0,0)0%,
-  rgba(0,0,0,0.6) 100%
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.6) 100%
   );
   z-index: 0;
 }
 
-.feature .item .text{
+.feature .item .text {
   position: absolute;
-  top:50%;
-  left:50%;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
-  color:white;
+  color: white;
   font-size: 16px;
   font-weight: bold;
   text-align: center;
@@ -251,67 +254,119 @@ a{
   width: 90%;
 }
 
-.feature .feature-list .item + .item{
+.feature .feature-list .item + .item {
   margin-top: 24px;
 }
-.feature-link{
+.feature-link {
   display: block;
 }
-.feature-link:hover .feature-img{
- opacity: 0.8;
+.feature-link:hover .feature-img {
+  opacity: 0.8;
 }
-.feature-img{
+.feature-img {
   transition: opacity 0.3s;
 }
 /* =========================
    footer
 ========================= */
 
-footer{
-  background: #F1F1F1;
+footer {
+  background: #f1f1f1;
   padding: 24px 0;
 }
 
-footer  small{
+footer small {
   margin-top: 28px;
   display: block;
   text-align: center;
 }
 
-footer nav{
+footer nav {
   margin-top: 16px;
 }
 
-footer address{
+footer address {
   margin-top: 16px;
 }
 
-footer address ul{
+footer address ul {
   display: flex;
   gap: 24px;
   font-size: 24px;
 }
 
-footer h1 img{
+footer h1 img {
   vertical-align: bottom;
 }
-footer address li .fa-brands{
+footer address li .fa-brands {
   color: gray;
 }
 
-footer .fa-brands:hover{
+footer .fa-brands:hover {
   color: black;
   transition: opacity 0.4s;
 }
 
-footer nav li{
+footer nav li {
   font-size: 16px;
 }
 
 /* =========================
    タブレット用の調整
 ========================= */
-@media (min-width:768px) and (max-width: 1024px){
+@media (min-width: 768px) and (max-width: 1024px) {
+  /* =========================
+     common
+  ========================= */
+  .container {
+    max-width: 880px;
+  }
+  /* =========================
+   header
+========================= */
+  header .ec-nav {
+    color: #76c904;
+    display: flex;
+    margin-left: auto;
+    order: 2;
+  }
+  header h1 {
+    order: 1;
+  }
+  header .m-menu {
+    order: 3;
+    margin-left: 24px;
+  }
+  header .ec-nav ul {
+    display: flex;
+    gap: 24px;
+    font-size: 24px;
+  }
+
+  .fa-solid,
+  .fa-regular {
+    color: #76c904;
+  }
+
+  /* =========================
+feature
+========================= */
+
+  .feature-list {
+    display: flex;
+    justify-content: space-between;
+    gap:16px;
+    flex-wrap: wrap;
+  }
+  .feature-list .item {
+    width: calc((100% - 16px) / 2);
+  }
+  .feature .item .text {
+    font-size: 20px;
+  }
+  .feature .feature-list .item + .item {
+  margin-top: 0;
+}
 
 }
 
@@ -319,7 +374,6 @@ footer nav li{
    PC以上
 ========================= */
 @media (min-width: 768px) {
-
   /* =========================
    pc-popular-item
 ========================= */
@@ -339,12 +393,11 @@ footer nav li{
     aspect-ratio: 1 / 1;
     object-fit: cover;
   }
-  .fa-brands{
-    color:gray
+  .fa-brands {
+    color: gray;
   }
 
   /* =========================
 pc-feature
 ========================= */
-
 }
