--- a/style.css
+++ b/style.css
@@ -106,6 +106,9 @@ header {
   position: sticky;
   top: 0;
   z-index: 2;
+  background: rgba(255, 255, 255, 0.6);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px); /* Safari対策 */
 }
 
 header .container {
@@ -322,6 +325,9 @@ footer nav li {
   .container {
     max-width: 100%;
   }
+    .more-btn {
+    width: 30%;
+  }
   /* =========================
    header(タブレット基準)
 ========================= */
@@ -389,25 +395,28 @@ feature(タブレット基準)
   .container {
     max-width: 1200px;
   }
-  button {
+  .more-btn {
     width: 30%;
   }
   /* =========================
    header(PC基準)
 ========================= */
-header h1{
-  margin-right: 64px;
-}
-header .main-nav {
+  header h1 {
+    margin-right: 64px;
+  }
+  header .main-nav {
     order: 2;
-    display: flex;
-    color: #76c904;
     font-size: 16px;
     font-weight: bold;
+    display: block;
   }
-header .main-nav ul{
-  gap:24px
-}
+  header .main-nav a {
+    color: #76c904;
+  }
+  header .main-nav ul {
+    display: flex;
+    gap: 24px;
+  }
 
   header .ec-nav {
     color: #76c904;
