--- a/style.css
+++ b/style.css
@@ -29,26 +29,8 @@ h3 {
   margin: 0 auto;
   position: relative;
   display: inline-block;
-  padding: 0 24px;
   font-size: 20px;
   letter-spacing: 1.2px;
-}
-h3::before,
-h3::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  display: inline-block;
-  width: 24px;
-  height: 2px;
-  border-top: solid 1px black;
-  border-bottom: solid 1px black;
-}
-h3::before {
-  left: 0;
-}
-h3::after {
-  right: 0;
 }
 
 h4 {
@@ -129,6 +111,8 @@ header form {
 }
 header img {
   display: block;
+  width: auto;
+  height: 36px;
 }
 /* =========================
    hero(スマホ基準)
@@ -213,7 +197,7 @@ a {
   margin-top: 32px;
   display: flex;
   flex-wrap: wrap;
-  gap: 16px;
+  gap:16px;
 }
 
 .feature .item .feature-img {
@@ -258,13 +242,13 @@ a {
 }
 
 .feature .feature-list .item + .item {
-  margin-top: 24px;
+  margin-top: 8px;
 }
 .feature-link {
   display: block;
 }
 .feature-link:hover .feature-img {
-  opacity: 0.8;
+  opacity: 0.8s;
 }
 .feature-img {
   transition: opacity 0.3s;
@@ -317,8 +301,111 @@ footer nav li {
 /* ===========================
    About Page(スマホ基準)
 =========================== */
+.breadcrumb {
+  font-size: 12px;
+  padding:12px 0;
+}
+.about-main{
+  padding: 40px 0;
+}
+.about-visual{
+  background:url(img/about.jpg) center / cover no-repeat;
+  width: 100%;
+  height: 45vh;
+  margin-top: 24px;
+}
+.about-content{
+  margin: 48px 0;
+}
+.about-content h2{
+  font-size: 16px;
+  font-weight:500;
+}
+.about-content img{
+  margin-top: 16px;
+}
+.about-content h3{
+  margin:24px;
+  display: block;
+  font-size: 16px;
+  text-align: center;
+  color: gray;
+}
 
+.about-content p{
+  font-size: 14px;
+  line-height: 24px;
+  color: gray;
+}
 
+.about-message{
+  display: block;
+  margin: 80px 0;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 550;
+  color: gray;
+}
+.about-message p{
+  line-height: 32px;
+  letter-spacing: 1.6px;
+}
+.about-message img{
+  display: block;
+  margin-right: auto;
+  text-align: left;
+  transform: rotate(-20deg);
+}
+.about-title{
+  text-align: center;
+  display: block;
+  font-size: 14px;
+  font-weight: bold;
+  color: gray;
+  padding-bottom: 16px;
+}
+.about-values ol{
+  counter-reset: num;
+  list-style: none;
+  padding-left: 0;
+  font-size: 14px;
+  color: gray;
+}
+.about-values ol li{
+  counter-increment: num;
+  margin-bottom: 0.9em;
+  text-decoration:underline 1px dotted rgb(210, 210, 210);
+  text-underline-offset: 3px;
+  padding-left: 2em;
+  position: relative;
+}
+.about-values ol li::before{
+  content: counter(num, decimal-leading-zero)".";
+  font-size: 13px;
+  position: absolute;
+  left: 0;
+}
+
+.about-photo{
+  margin-top:48px;
+  position: relative;
+}
+.about-photo p{
+  position: absolute;
+  top:80px;
+  left:50%;
+}
+.about-mission{
+  margin-top: 32px;
+}
+.about-mission h3{
+  font-size: 14px;
+  font-weight: bold;
+  color: gray;
+}
+.about-mission p{
+  font-size: 14px;
+}
 
 /* =========================
    タブレット用の調整
